[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/2D/Game2D/Game2D.gd" type="Script" id=1]
[ext_resource path="res://scenes/2D/Board2D/Board2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/2D/Timeline2D/Timeline2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/2D/Game2D/TurnIndicator.gd" type="Script" id=4]
[ext_resource path="res://scenes/Ui/RegularLabel/RegularLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/turnIndicator/turnRed.png" type="Texture" id=6]
[ext_resource path="res://scenes/2D/InGameSettings/Settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Ui/Dialog/Dialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Ui/LeatherButton/RedButtonMedium.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/sfx/kenney_metalLatch.ogg" type="AudioStream" id=10]

[node name="Game2D" type="Node"]
script = ExtResource( 1 )

[node name="Dialogs" type="Node" parent="."]

[node name="Sides" type="Node" parent="."]

[node name="Stack" type="Node" parent="."]

[node name="Board" parent="." instance=ExtResource( 2 )]

[node name="Timeline" parent="." instance=ExtResource( 3 )]

[node name="ExtraIndicators" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="VBoxContainer" parent="ExtraIndicators"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnIndicator" type="CenterContainer" parent="ExtraIndicators/Top"]
margin_right = 640.0
margin_bottom = 19.0
script = ExtResource( 4 )
side1Name = "Side1"
side2Name = "Side2"
side = 2

[node name="TextureRect" type="TextureRect" parent="ExtraIndicators/Top/TurnIndicator"]
margin_left = 263.0
margin_right = 377.0
margin_bottom = 19.0
texture = ExtResource( 6 )

[node name="LabelContainer" type="MarginContainer" parent="ExtraIndicators/Top/TurnIndicator"]
margin_left = 287.0
margin_top = 2.0
margin_right = 353.0
margin_bottom = 17.0
custom_constants/margin_top = 3

[node name="Label" parent="ExtraIndicators/Top/TurnIndicator/LabelContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 15.0
text = "Side2's turn"

[node name="SkipContainer" type="CenterContainer" parent="ExtraIndicators/Top"]
visible = false
margin_top = 23.0
margin_right = 640.0
margin_bottom = 38.0

[node name="RedButtonMedium" parent="ExtraIndicators/Top/SkipContainer" instance=ExtResource( 9 )]
margin_left = 292.0
margin_right = 347.0
label = "End turn"

[node name="Label" parent="ExtraIndicators/Top/SkipContainer/RedButtonMedium" index="1"]
margin_left = 4.0
margin_right = 51.0
text = "End turn"

[node name="Settings" parent="." instance=ExtResource( 7 )]

[node name="Dialog" parent="." instance=ExtResource( 8 )]
visible = false

[node name="AudioClues" type="Node" parent="."]

[node name="TurnPasses" type="AudioStreamPlayer2D" parent="AudioClues"]
position = Vector2( 320.663, 39.3366 )
stream = ExtResource( 10 )
volume_db = 14.857
pitch_scale = 0.49
bus = "Sfx"
[connection signal="pressed" from="ExtraIndicators/Top/SkipContainer/RedButtonMedium" to="." method="_on_RedButtonMedium_pressed"]
[connection signal="okPressed" from="Dialog" to="." method="_on_Dialog_okPressed"]

[editable path="ExtraIndicators/Top/SkipContainer/RedButtonMedium"]
